// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout element produces output containing children horizontal 1`] = `
<div
  className="css-tr2fgy-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children horizontal and wrapped 1`] = `
<div
  className="css-1kdau1b-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children vertical 1`] = `
<div
  className="css-146qj8d-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;
